cluster/applications/location/owntracks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: location
  labels:
    name: location
